HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/OpaqueMemberNotDefined/Expected.uv
//! Expected diagnostic metadata for the OpaqueMemberNotDefined rejected-source specimen.

expectedDiagnostic("E-TYP-2510", "req.14.OpaqueEquivalenceAndInterfaceExposure")
